--- a/.github/workflows/deploy_surge.yaml
+++ b/.github/workflows/deploy_surge.yaml
@@ -30,4 +30,4 @@ jobs:
       run: npm install -g surge
     
     - name: Run Surge
-      run: surge ./ freelancing-bootcamp.surge.sh --token ${{secrect.SURGE_TOKEN_HTML}}
+      run: surge ./ freelancing-bootcamp.surge.sh --token ${{secrects.SURGE_TOKEN_HTML}}
